syntax = "proto3";

package com.lodny.rwcommon.grpc;

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.tag";

service Tag {
  rpc registerTags (RegisterTagsRequest) returns (Empty);
  rpc getTop10TagString (Empty) returns (Top10TagsResponse);
}

message Empty {}

message RegisterTagsRequest {
  repeated string tags = 1;
  int64 articleId = 2;
}

//message TagRequest {
//  string name = 1;
//}
//
//message TagResponse {
//  string message = 1;
//}

message Top10TagsResponse {
  repeated string tags = 1;
}

